--- a/task6/css/index.css
+++ b/task6/css/index.css
@@ -29,7 +29,6 @@ body {
 }
 
 .header_time {
-    /*float:right;*/
     position: absolute;
     right: 0px;
     bottom: 0px;
@@ -73,4 +72,319 @@ body {
     border-top: 2px solid #cc8091;
     float: right;
 }
+
+.main_float_right_words {
+    margin-top: 10px;
+    margin-bottom: 0px;
+    text-transform: capitalize;
+    font: 24px "Microsoft Yahei";
+    color: #000000;
+    text-decoration: underline;
+}
+
+.main_float_right_little_words {
+    font: 12px STKaiti;
+    color: #676767;
+}
+
+.main_float_right_number {
+    font: italic 116px "Microsoft Yahei";
+    color: #75b86b;
+    position: relative;
+    right: 16px;
+    top: -9px;
+}
+
+.main_float_right_little_number {
+    position: relative;
+    top: -25px;
+}
+
+.main_float_right_little_number_first {
+    font: 55px "Microsoft Yahei";
+    color: #cc8091;
+    position: absolute;
+}
+
+.main_float_right_little_number_second {
+    position: absolute;
+    font: 21px "Microsoft Yahei";
+    color: #cc8091;
+    top: 21px;
+    left: 80px;
+}
+
+.main_float_right_little_number_third {
+    position: absolute;
+    font: 12px "Microsoft Yahei";
+    color: #cc8091;
+    left: 80px;
+    top: 44px;
+}
+
+/*div.middle*/
+.middle {
+    position: relative;
+}
+
+.what {
+    display: inline-block;
+    /*position: absolute;*/
+    /*top: 0px;*/
+    vertical-align: top;
+}
+
+.when {
+    display: inline-block;
+    /*position: absolute;*/
+    /*top: 0px;*/
+    vertical-align: top;
+}
+
+.how {
+    display: inline-block;
+    /*position: absolute;*/
+    /*top: 0px;*/
+    vertical-align: top;
+}
+
+.what_header {
+    font: 16px;
+    font-weight: bold;
+    color: green;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
+.when_header {
+    font: 16px;
+    font-weight: bold;
+    color: #d2994f;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
+.how_header {
+    font: 16px;
+    font-weight: bold;
+    color: #cc7680;
+    text-decoration: underline;
+    margin-bottom: 10px;
+}
+
+.middle_content {
+    margin-right: 59px;
+    height: 170px;
+    width: 170px;
+    word-wrap: break-word;
+}
+
+.how_content_sum {
+    font: 12px "Microsoft Yahei";
+    color: #cd4a48;
+}
+
+.how_content_sum span {
+    display: block;
+    margin-top: 10px;
+    opacity: 0.7;
+}
+
+/*div.bottom*/
+.bottom {
+    position: relative;
+}
+
+.bottom_left {
+    display: inline-block;
+    width: 458px;
+}
+
+.bottom_left_up {
+    line-height: 16px;
+}
+
+.bottom_left_up_title {
+    font: 42px STHeiti;
+    color: #11456b;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom:;
+}
+
+.bottom_left_up_title span {
+    font: 72px STHeiti;
+    color: #f5e327;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.bottom_left_up_sub_title {
+    display: block;
+    font: 33px STHeiti;
+    color: #11456b;
+    font-weight: bold;
+    padding-bottom: 6px;
+    border-bottom: 2px solid;
+    margin-bottom: 20px;
+}
+
+.text_content p{
+    word-wrap: break-word;
+    text-indent: 25px;
+    margin: 0px;
+    font: 12px STHeiti;
+    color: #767777;
+    line-height: 16px;
+}
+
+p.p_no_indent {
+    text-indent: 0px;
+}
+
+.text_content p span {
+    font: 70px STHeiti;
+    color: #f5e327;
+    float: left;
+}
+
+/*.bottom_left_down_pic {
+    height: 400px;
+    width: 200;
+    background: url('../images/cat.jpg');
+}*/
+
+.text_content img {
+    float: right;
+}
+
+.bottom_right_pic {
+    width: 458px;
+    height: 275px;
+    background: url('../images/cat_458x275.jpg');
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.bottom_right_pic_cover {
+    position: absolute;
+    bottom: 0px;
+    width: 458px;
+    height: 61px;
+    opacity: 0.5;
+    background-color: black;
+    /*text-align: center;*/
+}
+
+.bottom_right_pic_cover_words {
+    height: 44px;
+    border-left: 3px solid green;
+    font: 26px "Microsoft Yahei";
+    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    margin-left: 30px;
+}
+
+.bottom_right_pic_cover_words>span {
+    margin-left: 20px;
+}
+
+.bottom_right_pic_cover_words>span>span {
+    font: 12px "Microsoft Yahei";
+    color: green;
+    margin-left: 19px;
+
+    font-style: italic;
+    word-spacing: 16px;
+}
+
+.bottom_right_down {
+    height: 318px;
+    width: 459px;
+    background-color: grey;
+
+    position: absolute;
+
+    bottom: 0px;
+    right: 0px;
+
+    padding-top: 50px;
+}
+
+.words_row {
+    margin-top: 15px;
+}
+
+.arrow_up {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid black;
+
+    margin-left: 25px;
+    margin-right: 5px;
+
+}
+
+.bottom_right_down_left_corner {
+    width: 260px;
+    height: 160px;
+    background-color: red;
+
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+
+.bottom_right_down_left_corner .left {
+    width: 68px;
+    height: 86px;
+    font: 110px "Microsoft Yahei";
+    color: #ffffff;
+    border-right: 2px solid #ffffff;
+
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.bottom_right_down_left_corner .right {
+    width: 100px;
+    display: inline-block;
+    font: 12px STHeiti;
+    color: #ffffff;
+
+    position: absolute;
+    top: 50%;
+    transform: translate(30%, -50%);
+
+    word-wrap: break-word;
+}
+
+.bottom_right_down_left_corner .right .first_row {
+    position: absolute;
+    top: 0px;
+    left: 48px;
+}
+
+.bottom_right_down_left_corner .right .second_row {
+    position: absolute;
+    top: 10px;
+    left: 48px;
+}
+
 
